syntax = "proto3";
package customer.service;

option java_multiple_files = true;
option java_package = "au.com.nab.icommerce.customer.protobuf";
option java_outer_classname = "CustomerServiceDomain";

message PCustomer {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string provider = 4;
  string providerId = 5;
  string photoUrl = 6;
  string token = 7;
}

message CustomerResponse {
  int32 code = 1;
  PCustomer data = 2;
}